# src/main/resources/api-spec.yaml
@@ -84,16 +84,22 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/UserList'
+        500:
+          description: INTERNAL SERVER ERROR
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorResponse'
       tags:
         - users
-  /messages/user/{username}/getMessages:
+  /messages/getMessages:
     get:
       operationId: fetchUserMessages
       summary: Retrieve all unread messages of a user
       parameters:
-        - name: username
-          in: path
-          description: username of the user to retrieve messages
+        - name: Authorization
+          in: header
+          description: jwt token to extract username
           required: true
           schema:
             type: string
@@ -111,12 +117,28 @@ paths:
               schema:
                 $ref: '#/components/schemas/UserMessages'
         404:
-          description: User not found
+          description: NOT FOUND
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorResponse'
+        500:
+          description: INTERNAL SERVER ERROR
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorResponse'
       tags:
         - messages
   /messages/{messageType}/send:
     post:
       parameters:
+        - name: Authorization
+          in: header
+          description: jwt token to extract username
+          required: true
+          schema:
+            type: string
         - name: messageType
           in: path
           description: direct message or group message
@@ -138,12 +160,31 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/TextMessageResponse'
+        404:
+          description: not found
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorResponse'
+        500:
+          description: INTERNAL SERVER ERROR
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorResponse'
       tags:
         - messages
   /groups/create:
     post:
       operationId: createGroup
       summary: create user group
+      parameters:
+        - name: Authorization
+          in: header
+          description: jwt token to extract username
+          required: true
+          schema:
+            type: string
       requestBody:
         required: true
         content:
@@ -156,7 +197,19 @@ paths:
           content:
             application/json:
               schema:
-                type: boolean
+                $ref: '#/components/schemas/CreateGroupResponse'
+        404:
+          description: not found
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorResponse'
+        500:
+          description: INTERNAL SERVER ERROR
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorResponse'
       tags:
         - groups
   /groups/{operation}/members:
@@ -164,6 +217,12 @@ paths:
       operationId: addMembersToGroup
       summary: add members to group
       parameters:
+        - name: Authorization
+          in: header
+          description: jwt token to extract username
+          required: true
+          schema:
+            type: string
         - name: operation
           in: path
           description: group members add or remove
@@ -182,7 +241,19 @@ paths:
           content:
             application/json:
                schema:
-                 type: boolean
+                 $ref: '#/components/schemas/GroupMembersAddOrRemoveResponse'
+        404:
+          description: not found
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorResponse'
+        500:
+          description: INTERNAL SERVER ERROR
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorResponse'
       tags:
         - groups
 components:
@@ -245,8 +316,6 @@ components:
     TextMessageObject:
       type: object
       properties:
-        from:
-          type: int
         to:
           type: int
         text:
@@ -316,6 +385,14 @@ components:
             type: int
     GroupMembersAddOrRemoveResponse:
       type: object
+      properties:
+        status:
+          type: string
+        message:
+          type: string
+    ErrorResponse:
+      type:
+        object
       properties:
         status:
           type: string
